# datagen-cli

./: .gitignore  COMMERCIAL_LICENSE.md  LICENSE  README.md  pyproject.toml  requirements.txt
Dataset_Generator/: COMMERCIAL_LICENSE.md  LICENSE  README.md  pyproject.toml  requirement.txt
Dataset_Generator/datagen/: main.py
Dataset_Generator/datagen_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
datagen/: __init__.py  main.py
datagen/cli/: app.py
datagen/cli/commands/: generate.py  preview.py  validate.py
datagen/content/categories/: common.txt
datagen/content/cities/: common.txt
datagen/content/companies/: common.txt
datagen/content/countries/: common.txt
datagen/content/domains/: common.txt
datagen/core/: defaults.py  engine.py  exceptions.py  registry.py  schema_loader.py  schema_normalizer.py  schema_validator.py
datagen/exporters/: csv_exporter.py  dataframe.py  excel_exporter.py  json_exporter.py  manager.py
datagen/generators/: base.py  boolean.py  choice.py  datetime.py  identifiers.py  internet.py  location.py  numeric.py  personal.py  text.py
datagen/models/: column.py  config.py  schema.py
datagen/utils/: random_utils.py  type_utils.py
examples/: my_schema.json  partial_schema.json
tests/: test_cli.py  test_core.py
