[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datagen-cli"
version = "0.1.3"
description = "A colorful and interactive CLI tool to generate customizable synthetic datasets."
readme = "README.md"
authors = [
    { name = "Rishabh Kumar", email = "rishabh.contact.info@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["dataset", "data-generator", "cli", "faker", "synthetic-data"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console"
]

dependencies = [
    "typer>=0.12.3",
    "rich>=13.0.0",
    "faker>=24.0.0",
    "pandas>=2.0.0",
    "numpy>=1.25.0",
    "openpyxl>=3.1.0"
]

[project.urls]
"Homepage" = "https://github.com/Rishabh2728/datagen-cli"
[project.scripts]
datagen = "datagen.main:app"
